# 487-proj

./: .gitignore  1000s.csv  Lab1.ipynb  README.md  dummy.ipynb  dummy.py  evaluate.py  preprocess.py  process.py  process32_lol.py  process_data.py  result.txt  test.csv
.ipynb_checkpoints/: dummy-checkpoint.ipynb
datasets/: 32_lol.csv  cleaned.csv
datasets/final/: 1000.csv  12500.csv  debug.csv  eval.csv
references/: clean_hp.py  preprocess-twitter.rb
website/: index.html  pyproject.toml  requirements.txt
website/backend/: classifier.py
website/css/: style.css
website/fandom_clf.egg-info/: PKG-INFO  requires.txt
website/fandomclf/: __init__.py  config.py  index.py
website/fandomclf/api/: __init__.py  classifier.py
website/fandomclf/static/scripts/: main.js
website/fandomclf/templates/: index.html
website/fandomclf/views/: index.py
website/scripts/: confetti.js
website/style/: style.css
