[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fandom-clf"
version = "0.1.0"
dependencies = [
    "arrow",
    "bs4",
    "Flask",
    "joblib",
    "nltk",
    "virtualenv",
    "numpy",
    "pandas",
    "scikit-learn",
    "gensim.downloader",
    "tqdm"
]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["website"]
